crates/mega-evm/tests/tracers/snapshots/tracers__harness__deposit__call.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: "&traced.call_frame(false)"
---
{
  "from": "0x0000000000000000000000000000000000400000",
  "gas": "0xf9448",
  "gasUsed": "0x5208",
  "to": "0x0000000000000000000000000000000000400002",
  "input": "0x",
  "value": "0x7",
  "type": "CALL"
}
