crates/mega-evm/tests/tracers/snapshots/tracers__harness__deposit__prestate.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: "&traced.prestate(false)"
---
{
  "0x0000000000000000000000000000000000400000": {
    "balance": "0x38d7ea4c68000"
  },
  "0x0000000000000000000000000000000000400002": {
    "balance": "0x0",
    "code": "0x00"
  }
}
