crates/mega-evm/tests/tracers/snapshots/tracers__harness__deposit__prestate_diff.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: "&traced.prestate(true)"
---
{
  "post": {
    "0x0000000000000000000000000000000000400000": {
      "balance": "0x38d7ea4c683e1",
      "nonce": 1
    },
    "0x0000000000000000000000000000000000400002": {
      "balance": "0x7"
    }
  },
  "pre": {
    "0x0000000000000000000000000000000000400000": {
      "balance": "0x38d7ea4c68000"
    },
    "0x0000000000000000000000000000000000400002": {
      "balance": "0x0",
      "code": "0x00"
    }
  }
}
